src/objects/OpportunityLineItem__c.object
<CustomObject>
    <fields>
        <fullName>AdoptionYear__c</fullName>
        <label>採用年度</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AdoptionYear</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillingStatus__c</fullName>
        <formula>IF (
 NOT(Opportunity__r.Monitoring__c) ,
 &apos;請求書生成待ち&apos;,
IF (
 AND(
 Opportunity__r.Monitoring__c ,
 NOT( PaymentConfirmed__c ) ,
 JobOfferRefusal__c ,
 Product2__r.RefundObligation__c 
 ) ,
 &apos;辞退により入金不要&apos; ,
IF (
 AND(
 Opportunity__r.Monitoring__c ,
 PaymentConfirmed__c ,
 JobOfferRefusal__c ,
 Product2__r.RefundObligation__c 
 ) ,
 &apos;返金処理&apos; ,
IF (
 AND(
 Opportunity__r.Monitoring__c ,
 Opportunity__r.PaymentDueDateFixed__c  &gt;  TODAY() ,
 NOT( JobOfferRefusal__c ) ,
 NOT( PaymentConfirmed__c )
 ) ,
 &apos;入金待ち&apos; ,
IF (
 AND(
 Opportunity__r.Monitoring__c ,
 Opportunity__r.PaymentDueDateFixed__c  &lt;  TODAY() ,
 NOT( JobOfferRefusal__c ) ,
 NOT( PaymentConfirmed__c ) 
 ) ,
 &apos;入金督促&apos; ,
IF (
 AND(
 Opportunity__r.Monitoring__c ,
 PaymentConfirmed__c
 ) ,
 &apos;回収完了&apos;,
 &apos;&apos;
) 
) 
) 
) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>請求ステータス</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerAttributeCode__c</fullName>
        <formula>TEXT( MOD( VALUE( TEXT( Opportunity__r.Attribute__c ) ) ,10) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>③顧客属性コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateOfOffer__c</fullName>
        <label>提供日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DunningAlertDateTime__c</fullName>
        <label>￥￥_督促社内アラート日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DunningConfirmDueDateFixed__c</fullName>
        <label>￥￥_督促確認期限</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DunningConfirmDueDate__c</fullName>
        <formula>Opportunity__r.PaymentDueDate__c + 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>督促確認期限</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JobOfferRefusal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>内定辞退発生</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OBCD001__c</fullName>
        <defaultValue>&apos;*&apos;</defaultValue>
        <label>￥￥_OBCD001_区切</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityPJCode__c</fullName>
        <formula>Opportunity__r.ProjectCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>商談PJコード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>商談</label>
        <referenceTo>Opportunity__c</referenceTo>
        <relationshipLabel>商談商品</relationshipLabel>
        <relationshipName>OpportunityLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OrderedYearCode__c</fullName>
        <formula>TEXT( YEAR(  Opportunity__r.AgreementStartDateFixed__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>④受注年度コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_code__c</fullName>
        <formula>HYPERLINK( Id , LEFT(SUBSTITUTE( Opportunity__r.ProjectCode__c , &apos;-&apos;, &apos;&apos;) , 8) + RIGHT(ProjectCodBranch__c, 2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>①プロジェクトコード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRJT006__c</fullName>
        <label>￥￥_PRJT006_プロジェクト略称</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRJT007__c</fullName>
        <label>￥￥_PRJT007_用途区分コード</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRJT008__c</fullName>
        <label>￥￥_PRJT008_完成時の処理コード</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentConfirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>入金確認済</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>商品</label>
        <referenceTo>Product2__c</referenceTo>
        <relationshipLabel>商談商品</relationshipLabel>
        <relationshipName>OpportunityLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectCodBranch__c</fullName>
        <displayFormat>{00}</displayFormat>
        <label>￥￥_プロジェクトコード枝番</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>数量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RegionCode__c</fullName>
        <formula>TEXT(Opportunity__r.SalesPerson__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>②地域コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesPersonMail__c</fullName>
        <label>担当営業メールアドレス</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ServiceCode__c</fullName>
        <formula>TEXT(  Product2__r.ServiceType__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>⑥サービスコード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceYearCode__c</fullName>
        <formula>TEXT( YEAR(  Opportunity__r.AgreementStartDateFixed__c ) +  Product2__r.ServiceYears__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>⑤サービス対象年度コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentID__c</fullName>
        <label>学生ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuccessFee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>採用決定</label>
        <referenceTo>SuccessFee__c</referenceTo>
        <relationshipName>SaleProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalPriceIncludeTax__c</fullName>
        <formula>TotalPrice__c  * 1.08</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>合計金額（税込）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <label>合計金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>商談商品</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>BillingStatus__c</columns>
        <columns>JobOfferRefusal__c</columns>
        <columns>PaymentConfirmed__c</columns>
        <columns>Product2__c</columns>
        <columns>SalesPersonMail__c</columns>
        <columns>DunningConfirmDueDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>View20171018a</fullName>
        <columns>NAME</columns>
        <columns>OpportunityPJCode__c</columns>
        <columns>PJ_code__c</columns>
        <columns>RegionCode__c</columns>
        <columns>CustomerAttributeCode__c</columns>
        <columns>OrderedYearCode__c</columns>
        <columns>ServiceYearCode__c</columns>
        <columns>ServiceCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>コード情報</label>
    </listViews>
    <nameField>
        <displayFormat>商談商品-{0000}</displayFormat>
        <label>商談商品名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>